--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -7,86 +7,86 @@
     "comment": "BLOCKS",
     "block.mubble.vanadium_block": "Vanadiumblok",
     "block.mubble.vanadium_ore": "Vanadiumerts",
-    "//block.mubble.blue_bricks": "Blue Bricks",
-    "//block.mubble.light_blue_bricks": "Light Blue Bricks",
-    "//block.mubble.cyan_bricks": "Cyan Bricks",
-    "//block.mubble.green_bricks": "Green Bricks",
-    "//block.mubble.lime_bricks": "Lime Bricks",
-    "//block.mubble.yellow_bricks": "Yellow Bricks",
-    "//block.mubble.orange_bricks": "Orange Bricks",
-    "//block.mubble.red_bricks": "Red Bricks",
-    "//block.mubble.pink_bricks": "Pink Bricks",
-    "//block.mubble.magenta_bricks": "Magenta Bricks",
-    "//block.mubble.purple_bricks": "Purple Bricks",
-    "//block.mubble.brown_bricks": "Brown Bricks",
-    "//block.mubble.white_bricks": "White Bricks",
-    "//block.mubble.light_gray_bricks": "Light Gray Bricks",
-    "//block.mubble.gray_bricks": "Gray Bricks",
-    "//block.mubble.black_bricks": "Black Bricks",
-    "//block.mubble.blue_brick_stairs": "Blue Brick Stairs",
-    "//block.mubble.light_blue_brick_stairs": "Light Blue Brick Stairs",
-    "//block.mubble.cyan_brick_stairs": "Cyan Brick Stairs",
-    "//block.mubble.green_brick_stairs": "Green Brick Stairs",
-    "//block.mubble.lime_brick_stairs": "Lime Brick Stairs",
-    "//block.mubble.yellow_brick_stairs": "Yellow Brick Stairs",
-    "//block.mubble.orange_brick_stairs": "Orange Brick Stairs",
-    "//block.mubble.red_brick_stairs": "Red Brick Stairs",
-    "//block.mubble.pink_brick_stairs": "Pink Brick Stairs",
-    "//block.mubble.magenta_brick_stairs": "Magenta Brick Stairs",
-    "//block.mubble.purple_brick_stairs": "Purple Brick Stairs",
-    "//block.mubble.brown_brick_stairs": "Brown Brick Stairs",
-    "//block.mubble.white_brick_stairs": "White Brick Stairs",
-    "//block.mubble.light_gray_brick_stairs": "Light Gray Brick Stairs",
-    "//block.mubble.gray_brick_stairs": "Gray Brick Stairs",
-    "//block.mubble.black_brick_stairs": "Black Brick Stairs",
-    "//block.mubble.blue_brick_slab": "Blue Brick Slab",
-    "//block.mubble.light_blue_brick_slab": "Light Blue Brick Slab",
-    "//block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    "//block.mubble.green_brick_slab": "Green Brick Slab",
-    "//block.mubble.lime_brick_slab": "Lime Brick Slab",
-    "//block.mubble.yellow_brick_slab": "Yellow Brick Slab",
-    "//block.mubble.orange_brick_slab": "Orange Brick Slab",
-    "//block.mubble.red_brick_slab": "Red Brick Slab",
-    "//block.mubble.pink_brick_slab": "Pink Brick Slab",
-    "//block.mubble.magenta_brick_slab": "Magenta Brick Slab",
-    "//block.mubble.purple_brick_slab": "Purple Brick Slab",
-    "//block.mubble.brown_brick_slab": "Brown Brick Slab",
-    "//block.mubble.white_brick_slab": "White Brick Slab",
-    "//block.mubble.light_gray_brick_slab": "Light Gray Brick Slab",
-    "//block.mubble.gray_brick_slab": "Gray Brick Slab",
-    "//block.mubble.black_brick_slab": "Black Brick Slab",
-    "//block.mubble.blue_brick_vertical_slab": "Blue Brick Vertical Slab",
-    "//block.mubble.light_blue_brick_vertical_slab": "Light Blue Brick Vertical Slab",
-    "//block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    "//block.mubble.green_brick_vertical_slab": "Green Brick Vertical Slab",
-    "//block.mubble.lime_brick_vertical_slab": "Lime Brick Vertical Slab",
-    "//block.mubble.yellow_brick_vertical_slab": "Yellow Brick Vertical Slab",
-    "//block.mubble.orange_brick_vertical_slab": "Orange Brick Vertical Slab",
-    "//block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    "//block.mubble.pink_brick_vertical_slab": "Pink Brick Vertical Slab",
-    "//block.mubble.magenta_brick_vertical_slab": "Magenta Brick Vertical Slab",
-    "//block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    "//block.mubble.brown_brick_vertical_slab": "Brown Brick Vertical Slab",
-    "//block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    "//block.mubble.light_gray_brick_vertical_slab": "Light Gray Brick Vertical Slab",
-    "//block.mubble.gray_brick_vertical_slab": "Gray Brick Vertical Slab",
-    "//block.mubble.black_brick_vertical_slab": "Black Brick Vertical Slab",
-    "//block.mubble.blue_brick_wall": "Blue Brick Wall",
-    "//block.mubble.light_blue_brick_wall": "Light Blue Brick Wall",
-    "//block.mubble.cyan_brick_wall": "Cyan Brick Wall",
-    "//block.mubble.green_brick_wall": "Green Brick Wall",
-    "//block.mubble.lime_brick_wall": "Lime Brick Wall",
-    "//block.mubble.yellow_brick_wall": "Yellow Brick Wall",
-    "//block.mubble.orange_brick_wall": "Orange Brick Wall",
-    "//block.mubble.red_brick_wall": "Red Brick Wall",
-    "//block.mubble.pink_brick_wall": "Pink Brick Wall",
-    "//block.mubble.magenta_brick_wall": "Magenta Brick Wall",
-    "//block.mubble.purple_brick_wall": "Purple Brick Wall",
-    "//block.mubble.brown_brick_wall": "Brown Brick Wall",
-    "//block.mubble.white_brick_wall": "White Brick Wall",
-    "//block.mubble.light_gray_brick_wall": "Light Gray Brick Wall",
-    "//block.mubble.gray_brick_wall": "Gray Brick Wall",
-    "//block.mubble.black_brick_wall": "Black Brick Wall",
+    "block.mubble.blue_bricks": "Blauwe bakstenen",
+    "block.mubble.light_blue_bricks": "Lichtblauwe bakstenen",
+    "block.mubble.cyan_bricks": "Turquoise bakstenen",
+    "block.mubble.green_bricks": "Groene bakstenen",
+    "block.mubble.lime_bricks": "Lichtgroene bakstenen",
+    "block.mubble.yellow_bricks": "Gele bakstenen",
+    "block.mubble.orange_bricks": "Orange bakstenen",
+    "block.mubble.red_bricks": "Rode bakstenen",
+    "block.mubble.pink_bricks": "Roze bakstenen",
+    "block.mubble.magenta_bricks": "Magenta bakstenen",
+    "block.mubble.purple_bricks": "Paarse bakstenen",
+    "block.mubble.brown_bricks": "Bruine bakstenen",
+    "block.mubble.white_bricks": "Witte bakstenen",
+    "block.mubble.light_gray_bricks": "Lichtgrijze bakstenen",
+    "block.mubble.gray_bricks": "Grijze bakstenen",
+    "block.mubble.black_bricks": "Zwarte bakstenen",
+    "block.mubble.blue_brick_stairs": "Blauwe bakstenen trap",
+    "block.mubble.light_blue_brick_stairs": "Lichtblauwe bakstenen trap",
+    "block.mubble.cyan_brick_stairs": "Turquoise bakstenen trap",
+    "block.mubble.green_brick_stairs": "Groene bakstenen trap",
+    "block.mubble.lime_brick_stairs": "Lichtgroene bakstenen trap",
+    "block.mubble.yellow_brick_stairs": "Gele bakstenen trap",
+    "block.mubble.orange_brick_stairs": "Orange bakstenen trap",
+    "block.mubble.red_brick_stairs": "Rode bakstenen trap",
+    "block.mubble.pink_brick_stairs": "Roze bakstenen trap",
+    "block.mubble.magenta_brick_stairs": "Magenta bakstenen trap",
+    "block.mubble.purple_brick_stairs": "Paarse bakstenen trap",
+    "block.mubble.brown_brick_stairs": "Bruine bakstenen trap",
+    "block.mubble.white_brick_stairs": "Witte bakstenen trap",
+    "block.mubble.light_gray_brick_stairs": "Lichtgrijze bakstenen trap",
+    "block.mubble.gray_brick_stairs": "Grijze bakstenen trap",
+    "block.mubble.black_brick_stairs": "Zwarte bakstenen trap",
+    "block.mubble.blue_brick_slab": "Blauwe bakstenen plaat",
+    "block.mubble.light_blue_brick_slab": "Lichtblauwe bakstenen plaat",
+    "block.mubble.cyan_brick_slab": "Turquoise bakstenen plaat",
+    "block.mubble.green_brick_slab": "Groene bakstenen plaat",
+    "block.mubble.lime_brick_slab": "Lichtgroene bakstenen plaat",
+    "block.mubble.yellow_brick_slab": "Gele bakstenen plaat",
+    "block.mubble.orange_brick_slab": "Orange bakstenen plaat",
+    "block.mubble.red_brick_slab": "Rode bakstenen plaat",
+    "block.mubble.pink_brick_slab": "Roze bakstenen plaat",
+    "block.mubble.magenta_brick_slab": "Magenta bakstenen plaat",
+    "block.mubble.purple_brick_slab": "Paarse bakstenen plaat",
+    "block.mubble.brown_brick_slab": "Bruine bakstenen plaat",
+    "block.mubble.white_brick_slab": "Witte bakstenen plaat",
+    "block.mubble.light_gray_brick_slab": "Lichtgrijze bakstenen plaat",
+    "block.mubble.gray_brick_slab": "Grijze bakstenen plaat",
+    "block.mubble.black_brick_slab": "Zwarte bakstenen plaat",
+    "block.mubble.blue_brick_vertical_slab": "Blauwe bakstenen verticale plaat",
+    "block.mubble.light_blue_brick_vertical_slab": "Lichtblauwe bakstenen verticale plaat",
+    "block.mubble.cyan_brick_vertical_slab": "Turquoise bakstenen verticale plaat",
+    "block.mubble.green_brick_vertical_slab": "Groene bakstenen verticale plaat",
+    "block.mubble.lime_brick_vertical_slab": "Lichtgroene bakstenen verticale plaat",
+    "block.mubble.yellow_brick_vertical_slab": "Gele bakstenen verticale plaat",
+    "block.mubble.orange_brick_vertical_slab": "Orange bakstenen verticale plaat",
+    "block.mubble.red_brick_vertical_slab": "Rode bakstenen verticale plaat",
+    "block.mubble.pink_brick_vertical_slab": "Roze bakstenen verticale plaat",
+    "block.mubble.magenta_brick_vertical_slab": "Magenta bakstenen verticale plaat",
+    "block.mubble.purple_brick_vertical_slab": "Paarse bakstenen verticale plaat",
+    "block.mubble.brown_brick_vertical_slab": "Bruine bakstenen verticale plaat",
+    "block.mubble.white_brick_vertical_slab": "Witte bakstenen verticale plaat",
+    "block.mubble.light_gray_brick_vertical_slab": "Lichtgrijze bakstenen verticale plaat",
+    "block.mubble.gray_brick_vertical_slab": "Grijze bakstenen verticale plaat",
+    "block.mubble.black_brick_vertical_slab": "Zwarte bakstenen verticale plaat",
+    "block.mubble.blue_brick_wall": "Blauwe bakstenen muur",
+    "block.mubble.light_blue_brick_wall": "Lichtblauwe bakstenen muur",
+    "block.mubble.cyan_brick_wall": "Turquoise bakstenen muur",
+    "block.mubble.green_brick_wall": "Groene bakstenen muur",
+    "block.mubble.lime_brick_wall": "Lichtgroene bakstenen muur",
+    "block.mubble.yellow_brick_wall": "Gele bakstenen muur",
+    "block.mubble.orange_brick_wall": "Orange bakstenen muur",
+    "block.mubble.red_brick_wall": "Rode bakstenen muur",
+    "block.mubble.pink_brick_wall": "Roze bakstenen muur",
+    "block.mubble.magenta_brick_wall": "Magenta bakstenen muur",
+    "block.mubble.purple_brick_wall": "Paarse bakstenen muur",
+    "block.mubble.brown_brick_wall": "Bruine bakstenen muur",
+    "block.mubble.white_brick_wall": "Witte bakstenen muur",
+    "block.mubble.light_gray_brick_wall": "Lichtgrijze bakstenen muur",
+    "block.mubble.gray_brick_wall": "Grijze bakstenen muur",
+    "block.mubble.black_brick_wall": "Zwarte bakstenen muur",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Blunite trap",
     "block.mubble.blunite_wall": "Blunite muur",
@@ -233,19 +233,19 @@
     "block.mubble.scarlet_mushroom": "Scharlake paddenstoel",
     "block.mubble.scarlet_orchid": "Scharlake orchidee",
 
-    "//block.mubble.girder": "Girder",
-    "//block.mubble.mirror_temple_bricks": "Mirror Temple Bricks",
-    "//block.mubble.mirror_temple_brick_stairs": "Mirror Temple Brick Stairs",
-    "//block.mubble.mirror_temple_brick_slab": "Mirror Temple Brick Slab",
-    "//block.mubble.mirror_temple_brick_vertical_slab": "Mirror Temple Brick Vertical Slab",
-    "//block.mubble.mirror_temple_brick_wall": "Mirror Temple Brick Wall",
-    "//block.mubble.old_site_bricks": "Old Site Bricks",
-    "//block.mubble.old_site_brick_stairs": "Old Site Brick Stairs",
-    "//block.mubble.old_site_brick_slab": "Old Site Brick Slab",
-    "//block.mubble.old_site_brick_vertical_slab": "Old Site Brick Vertical Slab",
-    "//block.mubble.old_site_brick_wall": "Old Site Brick Wall",
+    "block.mubble.girder": "Stalenbalk",
+    "block.mubble.mirror_temple_bricks": "Spiegeltempel bakstenen",
+    "block.mubble.mirror_temple_brick_stairs": "Spiegeltempel bakstenen trap",
+    "block.mubble.mirror_temple_brick_slab": "Spiegeltempel bakstenen plaat",
+    "block.mubble.mirror_temple_brick_vertical_slab": "Spiegeltempel bakstenen verticale plaat",
+    "block.mubble.mirror_temple_brick_wall": "Spiegeltempel bakstenen muur",
+    "block.mubble.old_site_bricks": "Oude bouwstenen",
+    "block.mubble.old_site_brick_stairs": "Oude bouwstenen trap",
+    "block.mubble.old_site_brick_slab": "Oude bouwstenen plaat",
+    "block.mubble.old_site_brick_vertical_slab": "Oude bouwstenen verticale plaat",
+    "block.mubble.old_site_brick_wall": "Oude bouwstenen muur",
     "block.mubble.elder_pebbles": "Oudere keizels",
-    "//block.mubble.space_jam": "Space Jam",
+    "block.mubble.space_jam": "Ruimte jam",
     "block.mubble.space_obsidian": "Ruimte obsidiaan",
 
     "block.mubble.blue_puyo": "Blauwe puyo",
@@ -291,26 +291,26 @@
 
     "item.mubble.annoying_dog": "Iritante hond",
 
-    "//item.mubble.blank_music_disc": "Blank Music Disc",
-    "//item.mubble.music_disc_battlefield": "Music Disc",
-    "//item.mubble.music_disc_champions_road": "Music Disc",
-    "//item.mubble.music_disc_confronting_myself": "Music Disc",
-    "//item.mubble.music_disc_electroplankton_medley": "Music Disc",
-    "//item.mubble.music_disc_fields_of_hopes_and_dreams": "Music Disc",
-    "//item.mubble.music_disc_kass_theme": "Music Disc",
-    "//item.mubble.music_disc_lost_painting": "Music Disc",
-    "//item.mubble.music_disc_mad_mew_mew": "Music Disc",
-    "//item.mubble.music_disc_megalovania": "Music Disc",
-    "//item.mubble.music_disc_popple_battle": "Music Disc",
-    "//item.mubble.music_disc_reflection": "Music Disc",
-    "//item.mubble.music_disc_rude_buster": "Music Disc",
-    "//item.mubble.music_disc_shark_bytes": "Music Disc",
-    "//item.mubble.music_disc_sound_stage": "Music Disc",
-    "//item.mubble.music_disc_studiopolis_act1": "Music Disc",
-    "//item.mubble.music_disc_the_grand_finale": "Music Disc",
-    "//item.mubble.music_disc_type_a": "Music Disc",
-    "//item.mubble.music_disc_vampire_killer": "Music Disc",
-    "//item.mubble.music_disc_vs_champion_red_and_blue": "Music Disc",
+    "item.mubble.blank_music_disc": "Blanke muziekplaat",
+    "item.mubble.music_disc_battlefield": "Muziekplaat",
+    "item.mubble.music_disc_champions_road": "Muziekplaat",
+    "item.mubble.music_disc_confronting_myself": "Muziekplaat",
+    "item.mubble.music_disc_electroplankton_medley": "Muziekplaat",
+    "item.mubble.music_disc_fields_of_hopes_and_dreams": "Muziekplaat",
+    "item.mubble.music_disc_kass_theme": "Muziekplaat",
+    "item.mubble.music_disc_lost_painting": "Muziekplaat",
+    "item.mubble.music_disc_mad_mew_mew": "Muziekplaat",
+    "item.mubble.music_disc_megalovania": "Muziekplaat",
+    "item.mubble.music_disc_popple_battle": "Muziekplaat",
+    "item.mubble.music_disc_reflection": "Muziekplaat",
+    "item.mubble.music_disc_rude_buster": "Muziekplaat",
+    "item.mubble.music_disc_shark_bytes": "Muziekplaat",
+    "item.mubble.music_disc_sound_stage": "Muziekplaat",
+    "item.mubble.music_disc_studiopolis_act1": "Muziekplaat",
+    "item.mubble.music_disc_the_grand_finale": "Muziekplaat",
+    "item.mubble.music_disc_type_a": "Muziekplaat",
+    "item.mubble.music_disc_vampire_killer": "Muziekplaat",
+    "item.mubble.music_disc_vs_champion_red_and_blue": "Muziekplaat",
     "item.mubble.music_disc_battlefield.desc": "Super Smash Bros. Ultimate - Battlefield",
     "item.mubble.music_disc_champions_road.desc": "Super Mario 3D World - Champion's Road",
     "item.mubble.music_disc_confronting_myself.desc": "Celeste - Confronting Myself",
@@ -331,12 +331,12 @@
     "item.mubble.music_disc_vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
     "item.mubble.music_disc_vs_champion_red_and_blue.desc": "Pokémon Sun & Moon - VS. Champion Red & Blue",
 
-    "//item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Music Disc",
-    "//item.mubble.remix_disc_nb_buoy_base_galaxy": "Music Disc",
-    "//item.mubble.remix_disc_nb_fly_octo_fly": "Music Disc",
-    "//item.mubble.remix_disc_nb_harvest_hazards": "Music Disc",
-    "//item.mubble.remix_disc_nb_sweden": "Music Disc",
-    "//item.mubble.remix_disc_nb_waluigi_pinball": "Music Disc",
+    "item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Muziekplaat",
+    "item.mubble.remix_disc_nb_buoy_base_galaxy": "Muziekplaat",
+    "item.mubble.remix_disc_nb_fly_octo_fly": "Muziekplaat",
+    "item.mubble.remix_disc_nb_harvest_hazards": "Muziekplaat",
+    "item.mubble.remix_disc_nb_sweden": "Muziekplaat",
+    "item.mubble.remix_disc_nb_waluigi_pinball": "Muziekplaat",
     "item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's Mushrooms (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly (NoteBlock Remix)",
