--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -311,18 +311,18 @@
     "block.mubble.scarlet_mushroom": "Scharlachroter Pilz",
     "block.mubble.scarlet_orchid": "Scharlachrote Orchidee",
 
-    "//block.mubble.girder": "Girder",
+    "block.mubble.girder": "Träger",
     "//block.mubble.mirror_temple_bricks": "Mirror Temple Bricks",
     "//block.mubble.mirror_temple_brick_stairs": "Mirror Temple Brick Stairs",
     "//block.mubble.mirror_temple_brick_slab": "Mirror Temple Brick Slab",
     "//block.mubble.mirror_temple_brick_vertical_slab": "Mirror Temple Brick Vertical Slab",
     "//block.mubble.mirror_temple_brick_wall": "Mirror Temple Brick Wall",
-    "//block.mubble.old_site_bricks": "Old Site Bricks",
+    "//block.mubble.old_site_bricks": "Old Site Brick",
     "//block.mubble.old_site_brick_stairs": "Old Site Brick Stairs",
     "//block.mubble.old_site_brick_slab": "Old Site Brick Slab",
     "//block.mubble.old_site_brick_vertical_slab": "Old Site Brick Vertical Slab",
     "//block.mubble.old_site_brick_wall": "Old Site Brick Wall",
-    "block.mubble.elder_pebbles": "Elder Pebbles",
+    "block.mubble.elder_pebbles": "Ältester Kieselstein",
     "//block.mubble.space_jam": "Space Jam",
     "block.mubble.space_obsidian": "Weltraumobsidian",
 
@@ -369,26 +369,26 @@
 
     "item.mubble.annoying_dog": "Nerviger Hund",
 
-    "//item.mubble.blank_music_disc": "Blank Music Disc",
-    "//item.mubble.music_disc_battlefield": "Music Disc",
-    "//item.mubble.music_disc_champions_road": "Music Disc",
-    "//item.mubble.music_disc_confronting_myself": "Music Disc",
-    "//item.mubble.music_disc_electroplankton_medley": "Music Disc",
-    "//item.mubble.music_disc_fields_of_hopes_and_dreams": "Music Disc",
-    "//item.mubble.music_disc_kass_theme": "Music Disc",
-    "//item.mubble.music_disc_lost_painting": "Music Disc",
-    "//item.mubble.music_disc_mad_mew_mew": "Music Disc",
-    "//item.mubble.music_disc_megalovania": "Music Disc",
-    "//item.mubble.music_disc_popple_battle": "Music Disc",
-    "//item.mubble.music_disc_reflection": "Music Disc",
-    "//item.mubble.music_disc_rude_buster": "Music Disc",
-    "//item.mubble.music_disc_shark_bytes": "Music Disc",
-    "//item.mubble.music_disc_sound_stage": "Music Disc",
-    "//item.mubble.music_disc_studiopolis_act1": "Music Disc",
-    "//item.mubble.music_disc_the_grand_finale": "Music Disc",
-    "//item.mubble.music_disc_type_a": "Music Disc",
-    "//item.mubble.music_disc_vampire_killer": "Music Disc",
-    "//item.mubble.music_disc_vs_champion_red_and_blue": "Music Disc",
+    "item.mubble.blank_music_disc": "Leere Schallplatte",
+    "item.mubble.music_disc_battlefield": "Schallplatte",
+    "item.mubble.music_disc_champions_road": "Schallplatte",
+    "item.mubble.music_disc_confronting_myself": "Schallplatte",
+    "item.mubble.music_disc_electroplankton_medley": "Schallplatte",
+    "item.mubble.music_disc_fields_of_hopes_and_dreams": "Schallplatte",
+    "item.mubble.music_disc_kass_theme": "Schallplatte",
+    "item.mubble.music_disc_lost_painting": "Schallplatte",
+    "item.mubble.music_disc_mad_mew_mew": "Schallplatte",
+    "item.mubble.music_disc_megalovania": "Schallplatte",
+    "item.mubble.music_disc_popple_battle": "Schallplatte",
+    "item.mubble.music_disc_reflection": "Schallplatte",
+    "item.mubble.music_disc_rude_buster": "Schallplatte",
+    "item.mubble.music_disc_shark_bytes": "Schallplatte",
+    "item.mubble.music_disc_sound_stage": "Schallplatte",
+    "item.mubble.music_disc_studiopolis_act1": "Schallplatte",
+    "item.mubble.music_disc_the_grand_finale": "Schallplatte",
+    "item.mubble.music_disc_type_a": "Schallplatte",
+    "item.mubble.music_disc_vampire_killer": "Schallplatte",
+    "item.mubble.music_disc_vs_champion_red_and_blue": "Schallplatte",
     "item.mubble.music_disc_battlefield.desc": "Super Smash Bros. Ultimate - Battlefield",
     "item.mubble.music_disc_champions_road.desc": "Super Mario 3D World - Champion's Road",
     "item.mubble.music_disc_confronting_myself.desc": "Celeste - Confronting Myself",
@@ -409,12 +409,12 @@
     "item.mubble.music_disc_vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
     "item.mubble.music_disc_vs_champion_red_and_blue.desc": "Pokémon Sun & Moon - VS. Champion Red & Blue",
 
-    "//item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Music Disc",
-    "//item.mubble.remix_disc_nb_buoy_base_galaxy": "Music Disc",
-    "//item.mubble.remix_disc_nb_fly_octo_fly": "Music Disc",
-    "//item.mubble.remix_disc_nb_harvest_hazards": "Music Disc",
-    "//item.mubble.remix_disc_nb_sweden": "Music Disc",
-    "//item.mubble.remix_disc_nb_waluigi_pinball": "Music Disc",
+    "item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Schallplatte",
+    "item.mubble.remix_disc_nb_buoy_base_galaxy": "Schallplatte",
+    "item.mubble.remix_disc_nb_fly_octo_fly": "Schallplatte",
+    "item.mubble.remix_disc_nb_harvest_hazards": "Schallplatte",
+    "item.mubble.remix_disc_nb_sweden": "Schallplatte",
+    "item.mubble.remix_disc_nb_waluigi_pinball": "Schallplatte",
     "item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's Mushrooms (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly (NoteBlock Remix)",
@@ -422,8 +422,8 @@
     "item.mubble.remix_disc_nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
-    "//item.mubble.toad_spawn_egg":"Toad Spawn Egg",
-    "//item.mubble.chincho_spawn_egg":"Chincho Spawn Egg",
+    "item.mubble.toad_spawn_egg":"Toad-Spawn-Ei",
+    "item.mubble.chincho_spawn_egg":"Chincho-Spawn-Ei",
 
     "comment": "COSTUMES",
     "item.mubble.headphones": "Kopfhörer",
@@ -460,7 +460,7 @@
     "comment": "ENTITIES",
     "entity.mubble.toad": "Toad",
     "entity.mubble.chincho": "Chincho",
-    "//entity.mubble.flying_block": "Flying Block",
+    "entity.mubble.flying_block": "Fliegender Block",
 
     "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.power_up": "?-block.mubble gibt Power-Up",
